--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,35 +1,20 @@
 {
-  "name": "Tower of Hanoi - Classic Puzzle Game",
-  "short_name": "Hanoi Puzzle",
-  "description": "Classic Tower of Hanoi puzzle game with modern UI and warm sunset theme. Challenge yourself with this timeless mathematical puzzle!",
+  "name": "Hanoi",
+  "short_name": "Hanoi",
+  "description": "Monochrome Tower of Hanoi puzzle.",
   "start_url": "/toh/",
   "scope": "/toh/",
   "display": "standalone",
-  "orientation": "portrait-primary",
-  "theme_color": "#f97316",
-  "background_color": "#dc2626",
+  "orientation": "any",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "categories": ["games", "education", "puzzle"],
   "lang": "en",
   "dir": "ltr",
   "icons": [
-    {
-      "src": "/toh/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/toh/icons/icon-512x512.png", 
-      "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/toh/icons/icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
-    }
+    { "src": "/toh/icons/icon-mono.svg", "sizes": "256x256", "type": "image/svg+xml", "purpose": "any" },
+    { "src": "/toh/icons/icon-simple.svg", "sizes": "128x128", "type": "image/svg+xml", "purpose": "any" },
+    { "src": "/toh/icons/icon-mask.svg", "sizes": "512x512", "type": "image/svg+xml", "purpose": "any maskable" }
   ],
   "screenshots": [
     {
