--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
   ],
   "screenshots": [
     {
-      "src": "/toh/icons/icon-512x512.png",
+      "src": "/toh/icons/icon-mask.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "form_factor": "wide"
@@ -31,30 +31,20 @@
       "description": "Start an easy game with 3 disks",
       "url": "/toh/?difficulty=3",
       "icons": [
-        {
-          "src": "/toh/icons/icon-192x192.png",
-          "sizes": "192x192",
-          "type": "image/svg+xml"
-        }
+        { "src": "/toh/icons/icon-simple.svg", "sizes": "128x128", "type": "image/svg+xml" }
       ]
     },
     {
-      "name": "Hard (5 disks)", 
+      "name": "Hard (5 disks)",
       "short_name": "Hard",
       "description": "Start a challenging game with 5 disks",
       "url": "/toh/?difficulty=5",
       "icons": [
-        {
-          "src": "/toh/icons/icon-192x192.png",
-          "sizes": "192x192", 
-          "type": "image/svg+xml"
-        }
+        { "src": "/toh/icons/icon-mono.svg", "sizes": "256x256", "type": "image/svg+xml" }
       ]
     }
   ],
   "related_applications": [],
   "prefer_related_applications": false,
-  "edge_side_panel": {
-    "preferred_width": 400
-  }
+  "edge_side_panel": { "preferred_width": 400 }
 }
